# PersonalProjekte

./: README.md
hypeHomeDev/: .gitignore  .pre-commit-config.yaml  AGENT_B_PHASE1_SUMMARY.md  AGENT_B_PHASE4_SUMMARY.md  AGENT_B_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.arch  Dockerfile.ubuntu  GITHUB_INTEGRATION_DOCS.md  OUTCOME_DRIVEN_SYSTEM_BUILDER_SUMMARY.md  PHASE_0_COMPLETION_REPORT.md  PHASE_0_WALKTHROUGH.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_TASKS.md  PHASE_2_TASKS.md  PHASE_3_AGENT_C_REPORT.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_FINAL_SUMMARY.md  PHASE_3_TASKS.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_FINAL_INTEGRATION_REPORT.md  PHASE_4_TASKS.md  POWER_USER_SYSTEM_BUILDER_SUMMARY.md  PULL_REQUEST_PHASE_3.md  README.md  RUNNING.md  START_PHASE_1.md  com.github.hypedevhome.yml  development-plan.md  docker-compose.yml  errors_muss_be_handling.md  import_standardization_plan.md  investigate_memory_leak.py  new_plan.md  phase-0-tasks.md  phase-2-tasks.md  profile_github_performance.py  (+13 more)
hypeHomeDev/.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
hypeHomeDev/.github/workflows/: cross-distro-docker.yml  docker-build.yml  flatpak-build.yml  lint.yml  profile-scripts.yml  test.yml  type-check.yml
hypeHomeDev/.obsidian/: workspace.json
hypeHomeDev/.qwen/: settings.json
hypeHomeDev/data/: com.github.hypedevhome.desktop  com.github.hypedevhome.metainfo.xml
hypeHomeDev/docs/: phase_2_parallel_agents.md
hypeHomeDev/scripts/: dev-setup.sh  fill_workstation_learn_i18n.py  generate_cli_locale.py  phase-0-complete.sh  phase-1-complete.sh  setup_runner.sh  test-flatpak.sh  verify-launch.sh
hypeHomeDev/src/: __init__.py  app.py  main.py
hypeHomeDev/src/config/: autostart.py  defaults.py  manager.py  theme.py
hypeHomeDev/src/core/: accessibility.py  errors.py  events.py  i18n.py  logger.py  state.py
hypeHomeDev/src/ui/: about.py  toast_manager.py  utility_feedback.py  window.py
hypeHomeDev/src/utils/: helpers.py
hypeHomeDev/tests/test_config/: test_manager.py
hypeHomeDev/tests/test_core/: test_accessibility.py  test_activity_logging.py  test_agent_c_components.py  test_distrobox_stacks.py  test_env_manager.py  test_errors.py  test_events.py  test_hosts_duplicates.py  test_hypesync.py  test_i18n.py  test_integration_setup.py  test_maintenance.py  test_monitoring.py  test_package_installer_host_access.py  test_phase7_final.py  test_power_installer.py  test_pulse_monitoring.py  test_setup_components.py  test_setup_engine.py  test_snapshots.py  test_stack_validation.py  test_state.py
hypeHomeDev/tests/test_ui/: test_ai_manager_refactor.py  test_base_page.py  test_chart.py  test_cpu_widget.py  test_docker_logic.py  test_github_auth.py  test_github_widgets.py  test_gpu_widget.py  test_install_catalog.py  test_learn_factory_hostprobe.py  test_memory_widget.py  test_network_widget.py  (+8 more)
(+328 files in other folders)
