[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypedevhome"
version = "0.1.0"
description = "A 100% open-source Linux developer dashboard – built with Python, GTK4 & Libadwaita."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "HypeDevHome Contributors"},
]
keywords = ["linux", "developer", "dashboard", "gtk4", "libadwaita", "flatpak"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "PyGObject>=3.44",
    "psutil>=5.9",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "cachetools>=5.3.0",
    "python-dateutil>=2.8.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.7",
    "PyGObject-stubs>=2.8",
    "keyring>=25.0",
]

[project.scripts]
hypedevhome = "main:main"

[project.urls]
Homepage = "https://github.com/Karim-Termanini/hypeHomeDev"
Repository = "https://github.com/Karim-Termanini/hypeHomeDev"
Issues = "https://github.com/Karim-Termanini/hypeHomeDev/issues"

# ── Ruff ───────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app", "config", "core", "ui"]

# ── Mypy ────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false        # relax for Phase 0
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short -q"
asyncio_mode = "auto"

# ── Setuptools ──────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"ui.widgets.workstation" = ["*.md", "*.json"]
